--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "test-e2e": "source venv/bin/activate && LOCATION='local' py.test && deactivate",
+		"appium": "appium",
+		"appium:doctor": "appium-doctor"
   },
   "dependencies": {
     "react": "16.3.1",
