--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,13 @@ buck-out/
 
 # Bundle artifact
 *.jsbundle
+
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
+venv/
